[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/menu/crossed_sword_32x32.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/menu/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/montserrat_10.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/effects/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/menu/TitleScreen.gd" type="Script" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Menu"]
margin_right = 320.0
margin_bottom = 41.0
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="MarginContainer/Menu/HBoxContainer"]
margin_right = 32.0
margin_bottom = 41.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="MarginContainer/Menu"]
margin_top = 45.0
margin_right = 320.0
margin_bottom = 135.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/Menu/CenterRow"]
margin_right = 320.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 15
alignment = 1

[node name="NewGameButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 20.0

[node name="Label" parent="MarginContainer/Menu/CenterRow/Buttons/NewGameButton" index="0"]
text = "New Game"

[node name="ContinueButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 35.0
margin_right = 320.0
margin_bottom = 55.0

[node name="Label" parent="MarginContainer/Menu/CenterRow/Buttons/ContinueButton" index="0"]
text = "Continue"

[node name="SettingsButton3" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 320.0
margin_bottom = 90.0

[node name="Label" parent="MarginContainer/Menu/CenterRow/Buttons/SettingsButton3" index="0"]
text = "Settings"

[node name="Version" type="Label" parent="MarginContainer/Menu"]
margin_top = 139.0
margin_right = 320.0
margin_bottom = 168.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Version 0.0.1
EAWD"

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/SettingsButton3" to="." method="_on_SettingsButton3_pressed"]

[editable path="MarginContainer/Menu/CenterRow/Buttons/NewGameButton"]

[editable path="MarginContainer/Menu/CenterRow/Buttons/ContinueButton"]

[editable path="MarginContainer/Menu/CenterRow/Buttons/SettingsButton3"]
